@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5.1.0
+- Add apache_reset_timeout() Apache1 function. (Rasmus)
 - Make request start time be available via $_SERVER['REQUEST_TIME']. (Ilia)
 - Allow gettimeofday() return a float if optional argument is specified. (Ilia)
 - Added sqlite_fetch_column_types() 3rd argument for arrays. (Ilia)
